fix .notification z-index

--- a/library_web/src/styles.scss
+++ b/library_web/src/styles.scss
@@ -105,7 +105,7 @@ mat-dialog-content {
   padding: 20px;
   background-color: #f44336;
   color: white;
-  z-index: 1000;
+  z-index: 100000;
   border-radius: 10px;
   border: 1px solid black;
   box-shadow: 0 2px 4px 0x0c0c0c85;
